fix - Д5. Явно указано подходящее vertical-align для потоковых блоков с display: inline-block.

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -80,6 +80,8 @@
       max-height : 75px;
       margin : 0;
       margin-bottom : 29px;
+
+      vertical-align: middle;
       svg{
         max-width : none;
       }
