--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -108,6 +108,7 @@
       margin-bottom : 23px;
       padding : 0;
 
+      vertical-align: middle;
       &:before{
         position : absolute;
         top : 50%;
