--- a/source/sass/blocks/info.scss
+++ b/source/sass/blocks/info.scss
@@ -17,13 +17,13 @@
     padding : $p_base;
   }
   &__map{
-    padding-top : 30px;
-    display: block;
-     width : 100%;
-    height : 350px;
-    margin: 0 auto;
-  }
+    display : block;
 
+    width : 100%;
+    height : 350px;
+    margin : 0 auto;
+    padding-top : 30px;
+  }
 }
 @media (min-width: $screen-md){
   .info{
@@ -40,6 +40,8 @@
       max-width : 458px;
       margin-bottom : 40px;
       padding : 0;
+
+      vertical-align : middle;
     }
     &__map{
       padding-top : 0;
