--- a/source/sass/blocks/main-menu.scss
+++ b/source/sass/blocks/main-menu.scss
@@ -87,7 +87,7 @@
       }
       &--active{
         color : $c_brown;
-        :hover{
+        &:hover{
           color : $c_dark-brown;
           background : #fff;
         }
