--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -13,6 +13,7 @@
     margin-bottom : 6px;
     margin-left : 3px;
 
+    vertical-align : middle;
     text-decoration : none;
 
     color : #fff;
